新增支持打包其他语言配置，和打包windows服务配置